--- a/index.html
+++ b/index.html
@@ -4,12 +4,25 @@
     <meta charset="utf-8">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <style> body {padding: 0; margin: 0;} </style>
-    <script src="p5/p5.min.js"></script>
-    <script src="p5/addons/p5.dom.min.js"></script>
-    <script src="p5/addons/p5.sound.min.js"></script>
-    <script src="arkanoid.js"></script>
+   <style>
+    .button {
+    background-color: blue;
+    border: none;
+    color: white;
+    padding: 15px 25px;
+    text-align: center;
+    font-size: 16px;
+    cursor: pointer;
+}
+      
+      </style>
 
   </head>
   <body>
+      <button class="button", onclick="arkanoid.js">Start playing!</button>
+      <script src="p5/p5.min.js"></script>
+      <script src="p5/addons/p5.dom.min.js"></script>
+      <script src="p5/addons/p5.sound.min.js"></script>
+      <script src="arkanoid.js"></script>
   </body>
 </html>
